--- a/student.ipynb
+++ b/student.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
        "30154  18615 7th Avenue South, Burien, Washington 981...  47.435840 -122.32634  "
       ]
      },
-     "execution_count": 195,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -347,14 +347,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-197-a009b26462ef>:3: SettingWithCopyWarning: \n",
+      "<ipython-input-5-a009b26462ef>:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -371,26 +371,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-198-008fa64c390d>:4: SettingWithCopyWarning: \n",
+      "<ipython-input-6-008fa64c390d>:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  cleaningDF['waterfront'] = cleaningDF['waterfront'].map({\"YES\": 1, \"NO\": 0})\n",
-      "<ipython-input-198-008fa64c390d>:5: SettingWithCopyWarning: \n",
+      "<ipython-input-6-008fa64c390d>:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  cleaningDF['greenbelt'] = cleaningDF['greenbelt'].map({\"YES\": 1, \"NO\": 0})\n",
-      "<ipython-input-198-008fa64c390d>:6: SettingWithCopyWarning: \n",
+      "<ipython-input-6-008fa64c390d>:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -410,20 +410,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-199-7319aded9884>:3: SettingWithCopyWarning: \n",
+      "<ipython-input-7-7319aded9884>:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  cleaningDF['condition'] = cleaningDF['condition'].map(condition_mapping)\n",
-      "<ipython-input-199-7319aded9884>:4: SettingWithCopyWarning: \n",
+      "<ipython-input-7-7319aded9884>:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -436,22 +436,12 @@
     "condition_mapping = {'Very Good': 4, 'Good': 3, 'Average': 2, 'Fair': 1, 'Poor': 0}\n",
     "if cleaningDF['condition'][0] == 'Good':\n",
     "    cleaningDF['condition'] = cleaningDF['condition'].map(condition_mapping)\n",
-    "    cleaningDF['grade'] = cleaningDF['grade'].str.extract(r'(\\d+)').astype(int)\n",
-    "\n",
-    "# Standardizing Stuffs\n",
-    "cols_to_standardize = ['sqft_living', 'sqft_lot', 'sqft_above', 'sqft_basement', 'sqft_garage', 'sqft_patio']\n",
-    "HousingReady_Standardized = (cleaningDF[cols_to_standardize] - cleaningDF[cols_to_standardize].mean()) / cleaningDF[cols_to_standardize].std()\n",
-    "housingReady = cleaningDF.assign(sqft_living = HousingReady_Standardized['sqft_living'],\n",
-    "                               sqft_lot = HousingReady_Standardized['sqft_lot'],\n",
-    "                               sqft_above = HousingReady_Standardized['sqft_above'],\n",
-    "                               sqft_basement = HousingReady_Standardized['sqft_basement'],\n",
-    "                               sqft_garage = HousingReady_Standardized['sqft_garage'],\n",
-    "                               sqft_patio = HousingReady_Standardized['sqft_patio'])"
+    "    cleaningDF['grade'] = cleaningDF['grade'].str.extract(r'(\\d+)').astype(int)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -737,13 +727,12 @@
        "max     4370.000000   2022.000000   2022.000000     64.824070    -70.074340  "
       ]
      },
-     "execution_count": 201,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
     "housingReady.describe()"
    ]
   },
@@ -757,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +755,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -799,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -832,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -849,20 +838,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-205-673430ab9354>:20: SettingWithCopyWarning: \n",
+      "<ipython-input-13-673430ab9354>:20: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  housingReady[\"distance\"] = haversine(city_lat, city_long, housingReady[\"lat\"], housingReady[\"long\"])\n",
-      "<ipython-input-205-673430ab9354>:22: SettingWithCopyWarning: \n",
+      "<ipython-input-13-673430ab9354>:22: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -898,14 +887,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-206-bcab38bcd951>:2: SettingWithCopyWarning: \n",
+      "<ipython-input-14-bcab38bcd951>:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -921,20 +910,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-207-8044c23b0f9b>:2: SettingWithCopyWarning: \n",
+      "<ipython-input-15-8044c23b0f9b>:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  housingReady['yr_sold'] = housingReady['date'].dt.year\n",
-      "<ipython-input-207-8044c23b0f9b>:3: SettingWithCopyWarning: \n",
+      "<ipython-input-15-8044c23b0f9b>:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -951,14 +940,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-208-a4257c68544f>:3: SettingWithCopyWarning: \n",
+      "<ipython-input-16-a4257c68544f>:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -972,7 +961,7 @@
        "array([1, 3, 5, 2, 4], dtype=int64)"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -986,14 +975,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-209-aa1eeba26df4>:2: SettingWithCopyWarning: \n",
+      "<ipython-input-17-aa1eeba26df4>:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1017,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1026,7 +1015,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 210,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1067,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1115,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1163,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1219,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1267,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1276,7 +1265,7 @@
        "(30111, 30)"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1287,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1311,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1352,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1362,7 +1351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1371,7 +1360,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1403,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1434,9 +1423,212 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Model 7: Adding Waterfront"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The intercept is: -1113853.7416029403\n",
+      "The coefficient is: 372.9293235595517\n",
+      "R^2:  0.4485698935963913\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = housingReady['price']\n",
+    "X = housingReady[['sqft_living','Patio','Years_Since_Update','distance','grade','Garage','waterfront']]\n",
+    "# Train Test Split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, train_size=0.8, random_state=42)\n",
+    "# Create Model\n",
+    "Model7 = LinearRegression()\n",
+    "Model7.fit(X_train, y_train)\n",
+    "intercept = Model7.intercept_\n",
+    "coef = Model7.coef_\n",
+    "# Print Results:\n",
+    "print(f\"The intercept is: {intercept}\")\n",
+    "print(f\"The coefficient is: {coef[0]}\")\n",
+    "y_pred = Model7.predict(X_test)\n",
+    "print(\"R^2: \", Model7.score(X_test, y_test))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Model 8: Adding Nuisance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The intercept is: -1113853.7416029403\n",
+      "The coefficient is: 373.4122800717732\n",
+      "R^2:  0.45062326401468145\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = housingReady['price']\n",
+    "X = housingReady[['sqft_living','Patio','Years_Since_Update','distance','grade','Garage','waterfront','nuisance']]\n",
+    "# Train Test Split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, train_size=0.8, random_state=42)\n",
+    "# Create Model\n",
+    "Model8 = LinearRegression()\n",
+    "Model8.fit(X_train, y_train)\n",
+    "intercept = Model8.intercept_\n",
+    "coef = Model8.coef_\n",
+    "# Print Results:\n",
+    "print(f\"The intercept is: {intercept}\")\n",
+    "print(f\"The coefficient is: {coef[0]}\")\n",
+    "y_pred = Model8.predict(X_test)\n",
+    "print(\"R^2: \", Model8.score(X_test, y_test))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Model 9: Adding Greenbelt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The intercept is: -1193535.2560693093\n",
+      "The coefficient is: 373.21517937964745\n",
+      "R^2:  0.450556803579944\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = housingReady['price']\n",
+    "X = housingReady[['sqft_living','Patio','Years_Since_Update','distance','grade','Garage','waterfront','nuisance','greenbelt']]\n",
+    "# Train Test Split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, train_size=0.8, random_state=42)\n",
+    "# Create Model\n",
+    "Model9 = LinearRegression()\n",
+    "Model9.fit(X_train, y_train)\n",
+    "intercept = Model9.intercept_\n",
+    "coef = Model9.coef_\n",
+    "# Print Results:\n",
+    "print(f\"The intercept is: {intercept}\")\n",
+    "print(f\"The coefficient is: {coef[0]}\")\n",
+    "y_pred = Model9.predict(X_test)\n",
+    "print(\"R^2: \", Model9.score(X_test, y_test))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It went down? BOOOOO. Get it outta there."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Model 10: Remove Greenbelt, Add View"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The intercept is: -1259578.0555290685\n",
+      "The coefficient is: 359.3949940649245\n",
+      "R^2:  0.4561963500752484\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = housingReady['price']\n",
+    "X = housingReady[['sqft_living','Patio','Years_Since_Update','distance','grade','Garage','waterfront','nuisance','view']]\n",
+    "# Train Test Split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, train_size=0.8, random_state=42)\n",
+    "# Create Model\n",
+    "Model10 = LinearRegression()\n",
+    "Model10.fit(X_train, y_train)\n",
+    "intercept = Model10.intercept_\n",
+    "coef = Model10.coef_\n",
+    "# Print Results:\n",
+    "print(f\"The intercept is: {intercept}\")\n",
+    "print(f\"The coefficient is: {coef[0]}\")\n",
+    "y_pred = Model10.predict(X_test)\n",
+    "print(\"R^2: \", Model10.score(X_test, y_test))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Model 11: Add Condition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The intercept is: -1480401.360372828\n",
+      "The coefficient is: 353.9981920219968\n",
+      "R^2:  0.45728650121840353\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = housingReady['price']\n",
+    "X = housingReady[['sqft_living','Patio','Years_Since_Update','distance','grade','Garage','waterfront','nuisance','view','condition']]\n",
+    "# Train Test Split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, train_size=0.8, random_state=42)\n",
+    "# Create Model\n",
+    "Model11 = LinearRegression()\n",
+    "Model11.fit(X_train, y_train)\n",
+    "intercept = Model11.intercept_\n",
+    "coef = Model11.coef_\n",
+    "# Print Results:\n",
+    "print(f\"The intercept is: {intercept}\")\n",
+    "print(f\"The coefficient is: {coef[0]}\")\n",
+    "y_pred = Model11.predict(X_test)\n",
+    "print(\"R^2: \", Model11.score(X_test, y_test))"
+   ]
   },
   {
    "cell_type": "code",
@@ -1448,9 +1640,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "learn-env",
+   "display_name": "Python (learn-env)",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
