--- a/HousingNotebookFinal.ipynb
+++ b/HousingNotebookFinal.ipynb
@@ -2404,14 +2404,14 @@
     "train_data.drop([\"has_patio\"], axis=1, inplace=True)\n",
     "test_data.drop([\"has_patio\"], axis=1, inplace=True)\n",
     "\n",
-    "train_data.drop([\"floors\"], axis=1, inplace=True)\n",
-    "test_data.drop([\"floors\"], axis=1, inplace=True)\n",
+    "#train_data.drop([\"floors\"], axis=1, inplace=True)\n",
+    "#test_data.drop([\"floors\"], axis=1, inplace=True)\n",
     "\n",
-    "train_data.drop([\"nuisance\"], axis=1, inplace=True)\n",
-    "test_data.drop([\"nuisance\"], axis=1, inplace=True)\n",
+    "#train_data.drop([\"nuisance\"], axis=1, inplace=True)\n",
+    "#test_data.drop([\"nuisance\"], axis=1, inplace=True)\n",
     "\n",
-    "train_data.drop(['bathrooms'], axis=1, inplace=True)\n",
-    "test_data.drop(['bathrooms'], axis=1, inplace=True)\n",
+    "#train_data.drop(['bathrooms'], axis=1, inplace=True)\n",
+    "#test_data.drop(['bathrooms'], axis=1, inplace=True)\n",
     "\n",
     "train_data.drop([\"greenbelt\"], axis=1, inplace=True)\n",
     "test_data.drop([\"greenbelt\"], axis=1, inplace=True)\n",
@@ -2419,13 +2419,14 @@
     "train_data.drop([\"bedrooms\"], axis=1, inplace=True)\n",
     "test_data.drop([\"bedrooms\"], axis=1, inplace=True)\n",
     "\n",
-    "train_data.drop([\"condition\"], axis=1, inplace=True)\n",
-    "test_data.drop([\"condition\"], axis=1, inplace=True)\n",
+    "#train_data.drop([\"condition\"], axis=1, inplace=True)\n",
+    "#test_data.drop([\"condition\"], axis=1, inplace=True)\n",
     "\n",
-    "train_data.drop([\"sqft_living\"], axis=1, inplace=True)\n",
-    "test_data.drop([\"sqft_living\"], axis=1, inplace=True)\n",
+    "#train_data.drop([\"sqft_living\"], axis=1, inplace=True)\n",
+    "#test_data.drop([\"sqft_living\"], axis=1, inplace=True)\n",
     "\n",
-    "                   "
+    "train_data.drop([\"sqft_lot\"], axis=1, inplace=True)\n",
+    "test_data.drop([\"sqft_lot\"], axis=1, inplace=True)"
    ]
   },
   {
@@ -2663,7 +2664,7 @@
     "sns.regplot(x=test_data['price'], y=predictions)\n",
     "plt.xlabel(\"Actual Prices\")\n",
     "plt.ylabel(\"Predicted Prices\")\n",
-    "plt.title(\"Actual vs Predicted Prices\")\n",
+    "plt.title(\"Actual vs Predicted Prices (USD)\")\n",
     "plt.show()\n",
     "\n",
     "# calculate the residuals\n",
