--- a/student.ipynb
+++ b/student.ipynb
@@ -1640,9 +1640,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (learn-env)",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "learn-env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
