--- a/HousingNotebookFinal.ipynb
+++ b/HousingNotebookFinal.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -11,7 +10,15 @@
    ]
   },
   {
-   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The Problem\n",
+    "\n",
+    "J.P. Morgan Chase is a stakeholder facing the problem of finding ways to make a profit through buying underpriced houses. The goal is to locate and acquire undervalued properties in the market. With the use of a statistical model, J.P. Morgan Chase can identify the underpriced houses and make informed decisions to purchase them, ultimately increasing their profit margins. This project presents a solution to a real-world problem faced by J.P. Morgan Chase, providing value and practical applications in the world of real estate investment."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -91,7 +98,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -110,7 +116,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -728,7 +733,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -764,7 +768,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -810,7 +813,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -856,7 +858,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -879,7 +880,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -905,7 +905,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -938,7 +937,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1062,7 +1060,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1094,7 +1091,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1297,7 +1293,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1305,7 +1300,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1387,7 +1381,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1590,7 +1583,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1682,7 +1674,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1857,7 +1848,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1982,7 +1972,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2094,7 +2083,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2137,7 +2125,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2266,6 +2253,13 @@
    ],
    "source": [
     "train_data.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Frist Model after Train/Test Split"
    ]
   },
   {
@@ -2407,6 +2401,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Testing how catagory columns effect moodel"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 63,
    "metadata": {},
@@ -2438,6 +2439,13 @@
     "\n",
     "train_data.drop([\"sqft_lot\"], axis=1, inplace=True)\n",
     "test_data.drop([\"sqft_lot\"], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Scaling int Columns "
    ]
   },
   {
@@ -2486,6 +2494,13 @@
     "\n",
     "# Transform the 'years_since_build_or_renov' column\n",
     "test_data['distance'] = scaler.transform(test_data[['distance']])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Final Model"
    ]
   },
   {
@@ -2623,6 +2638,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test Final Model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 66,
    "metadata": {},
@@ -2736,11 +2758,43 @@
     "print(\"MAE:\", mae)\n",
     "print('R-squared score:', r2*100)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Limitations of the analysis:\n",
+    "\n",
+    "While the analysis provides valuable insights into the business problem, there are several factors that may impact its validity and accuracy, including:\n",
+    "* Data limitations: The accuracy and completeness of the data used for the analysis can affect the results. If the data is not up-to-date or complete, the findings may not accurately reflect the current situation.\n",
+    "\n",
+    "* Assumptions made: The analysis is based on certain assumptions, such as the validity of the data and the absence of outside factors that may affect the results. If these assumptions are not met, the results may be misleading.\n",
+    "\n",
+    "* Model limitations: The models used in the analysis are based on past data and may not accurately predict future trends. Additionally, the models may not capture all relevant factors that impact the business problem.\n",
+    "\n",
+    "# Future work:\n",
+    "\n",
+    "To further improve the analysis and provide more comprehensive solutions to the business problem, the following steps can be taken in the future:\n",
+    "* Gather more data: Collecting additional data from a wider range of sources can help to improve the accuracy and completeness of the analysis.\n",
+    "\n",
+    "* Refine the models: The models used in the analysis can be refined and improved to better capture the underlying relationships and trends in the data.\n",
+    "\n",
+    "* Incorporate additional factors: Consider incorporating additional factors, such as competitor analysis or market trends, into the analysis to provide a more comprehensive understanding of the business problem.\n",
+    "\n",
+    "* Repeat the analysis: Regularly repeating the analysis can help to track changes and trends over time, and adjust the strategies and recommendations accordingly."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "learn-env",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2756,10 +2810,9 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.1"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "ccc25f6ce3a3531634b997247f42687188fcc172d595f2f4d6b51042a543034f"
+    "hash": "c94d3b298a2db089b71080110ba5ce5685789b6b6f70cb29154f8738d90f3079"
    }
   }
  },
