--- a/HousingNotebookFinal.ipynb
+++ b/HousingNotebookFinal.ipynb
@@ -768,10 +768,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Realize that we have bad data in the lat long ield so we will have to remove the outliers outside Kings County"
+    "Realize that we have bad data in the lat long so we will have to remove the outliers outside Kings County"
    ]
   },
   {
@@ -905,10 +906,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Look at the distrobution of price"
+    "# Look at the distribution  of price"
    ]
   },
   {
@@ -1060,10 +1062,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Check map again"
+    "# Check map again for price patterns"
    ]
   },
   {
